# maldev

./: .gitignore  LICENSE.txt  README.md  avet.py  cat.txt
avet_structure/input/: hollowing_payload_enc.txt  hollowing_payload_enc_c.txt  key_c.txt  key_raw.txt  sc_raw.txt  scenc_c.txt  scenc_raw.txt
avet_structure/source/: avet.c
avet_structure/source/implementations/encoding/rc4/: rc4_encoder.c
avet_structure/source/implementations/encoding/xor/: xor_decoder.h
avet_structure/source/implementations/evasion/: check_memory_size.h  fopen_sandbox_evasion.h  gethostbyname_sandbox_evasion.h  has_process_exit.h  hide_console.h
avet_structure/source/implementations/retrieve_data/: static_from_file.h
llvm_structure/: CMakeLists.txt  README.md  ast_tool.sh  build.sh  clean.sh  install.sh
llvm_structure/include/: example.h
llvm_structure/lib/passes/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  MyPass.cpp  TestPass.cpp  build.ninja  cmake_install.cmake
llvm_structure/src/: example.cpp  main.cpp
llvm_structure/src/passes/: CMakeLists.txt  test_pass.cpp
metamorphism_sample_structure/: CMakeLists.txt  README.md  build.sh  clean.sh  install.sh
metamorphism_sample_structure/lib/: encryption_pass.cpp
metamorphism_sample_structure/lib/passes/: encryption_pass.cpp
metamorphism_sample_structure/lib/utils/: function_encrypter.cpp  meta_engine.c
metamorphism_sample_structure/src/core/: c2_handler.c  control_flow_handler.c  control_flow_handler.h  cryptor.c  cryptor.h  main.c
metamorphism_sample_structure/src/crypto/: aes.h  kdf.h  xor.c  xor.h
metamorphism_sample_structure/src/data/: adjacency_table.c  adjacency_table.h  config.c  config.h
metamorphism_sample_structure/src/loader/: loader.c  loader.h
metamorphism_structure/: README.md  build.sh  clean.sh  file
metamorphism_structure/include/: control_flow_node.h
polymorphism_structure/: CMakeLists.txt  install.sh
polymorphism_structure/src/: control_flow_map.cpp  main.cpp
source/implementations/command_exec/: no_command.h
source/implementations/encoding/avet/: avet_encoder
source/implementations/encoding/rc4/: rc4.h  rc4_decoder.h
source/implementations/evasion/: block_input.h  check_common_loaded_dlls.h  check_fast_forwarding.h  check_fast_forwarding_no_winapi.h  dll_unhooking.h  get_tickcount.h  vodoo_magic.h
source/implementations/evasion/todo/: anti_debug.h  check_activity.h  check_sandbox.h
source/implementations/linkers/: exec_shellcode64_no_winapi.ld
source/implementations/payload_execution_method/: exec_shellcode64.h  exec_shellcode64_no_winapi.h
source/implementations/retrieve_data/: no_data.h
troubleshooting/: objdump_not_working_exe.txt  objdump_working_exe.txt
